<resources>
    <string name="app_name">Purina®</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="choose_preferred_language">Choose Your Preferred <br /> Location-Language Pair </string>
    <string name="language_russia">Russian</string>
    <string name="language_hungaria">Hungarian</string>
    <string name="language_italia">Italian</string>
    <string name="language_english">English</string>
    <string name="language_polish">Polish</string>
    <string name="language_roman">Romana</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="contact">Contact</string>
    <string name="languageInstruction">You can change your preference <br />in the settings</string>
    <string name="welcome">Welcome</string>
    <string name="rearing">"Rearing "</string>
    <string name="locate_store">Locate      Store</string>
    <string name="product_catalog">Product Catalogue</string>
    <string name="feed_program">Feed Program Calculator</string>
    <string name="feed_pro">Feed Program</string>
    <string name="identify_disease">Identify Disease</string>
    <string name="identify_disease_frag">Identify Disease</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="how_to_use">How to use this app</string>
    <string name="language">Language</string>
    <string name="change">  Change  </string>
    <string name="feedback">Feedback</string>
    <string name="share_feedback">Share your valuable feedback with us</string>
    <string name="rate_us">Rate Us</string>
    <string name="any_thoughts">Do you have any thoughts that you would like to share?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="no_internet">No Internet !!</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="apply">Apply</string>
    <string name="choose_sub_species">Choose Sub-species</string>
    <string name="choose_category">Select/Choose Product Category</string>
    <string name="choose_stage">Select/Choose Stage</string>
    <string name="no_data_found">No data found</string>
    <string name="enter_product_code">Enter product code,name</string>
    <string name="enter_feed_name">Enter program name</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="select_species">Select Species by pressing on the filter icon</string>
    <string name="recipe_code">Recipe Code: </string>
    <string name="working_offline">Working in offline mode</string>
    <string name="description" >Description</string>
    <string name="benefits">Benefits</string>
    <string name="feeding_instructions">Feeding Instructions</string>
    <string name="mixing_instructions">Mixing Instructions</string>
    <string name="nutritional_data">Nutritional Data</string>
    <string name="ingredients">Ingredients</string>
    <string name="recommendations_for_slaughter">Recommendations for Slaughter</string>
    <string name="please_select_language">Please choose your preferred Location-Language Pair</string>
    <string name="form">Form</string>
    <string name="know_more">Know More</string>
    <string name="know_more_from_web">Know more from Web</string>
    <string name="validity">Validity (Month/s)</string>
    <string name="subBrand">Sub-brand</string>
    <string name="enter_animals">Enter No of animals</string>
    <string name="choose_feed_program">Choose Feed Program</string>
    <string name="please_fill"><font color="#FF0000">* </font>Please, fill the cost and other expenses after tapping on each card</string>
    <string name="age_of_starting_feed">Age of starting feed</string>
    <string name="expected_weight_of_one_animal">Expected Weight of one animal</string>
    <string name="additional_expenses">Additional Expenses</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="additional_feed">Additional Feed</string>
    <string name="bag_price">Bag Price/kg</string>
    <string name="finish_feed">Finish Feed (Age in Days)</string>
    <string name="feeding_norms_stage">Feeding norms for the stage (kg/head)</string>
    <string name="expected_wt">Expected Weight at the end of the stage (kg/head)</string>
    <string name="cost_feed">Feed Cost</string>
    <string name="accumulated_code_perkg">Accumulated Cost(/kg)</string>
    <string name="accumulated_code_perhead">Accumulated Cost(/head)</string>
    <string name="mortality_rate">Mortality Rate</string>
    <string name="norms_feeding">Feeding Norms (kg/day/head)</string>
    <string name="inclusion_rate">Inclusion Rate%</string>
    <string name="complete_feed">Complete Feed Equivalent (kg)</string>
    <string name="feed_required">Feed Required</string>
    <string name="finish_day">Finish Day</string>
    <string name="number_of_animals">Number of animal</string>
    <string name="purina_feed_cost">Purina® Feed Cost</string>
    <string name="other_expenses">Other Expenses</string>
    <string name="total_cost">Total Cost of meat</string>
    <string name="purina_feed_required">Purina® Feed Required kg</string>
    <string name="completed_feed_equivalent">Complete Feed Equivalent Kg</string>
    <string name="expected_meat">Expected Meat kg</string>
    <string name="convertion_rate">Conversion Rate Kg</string>
    <string name="heads_remaining">Remaining head count</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="to_buy">To buy</string>
    <string name="to_change_feed">To change Feed</string>
    <string name="age_of_animal">Age of animal</string>
    <string name="as_on">As on </string>
    <string name="create">Create</string>
    <string name="set_on">Reminder Set on </string>
    <string name="please_enter_age">Please enter the Age of the species</string>
    <string name="events_created">Events Created</string>
    <string name="reminder_not_created">Reminder not created</string>
    <string name="stage">Stage</string>
    <string name="please_enter_animals">Please enter number of Animals</string>
    <string name="please_select_feed_program">Please select feed Program</string>
    <string name="three_day_advance">3 days in advance</string>
    <string name="one_day_advance"> days in advance</string>
    <string name="reminder_buy_description">Reminder to buy Purina® feed</string>
    <string name="reminder_change_description">Reminder to change Purina® feed</string>
    <string name="rearing_animal">Rearing animal</string>
    <string name="file_downloading">File downloading in progress.</string>
    <string name="please_wait">Please wait till the file downloads completely.</string>
    <string name="no_File_no_internet">File cannot be downloaded as you are in offline mode. Please connect to internet.</string>
    <string name="article">Article Name</string>
    <string name="species">Species</string>
    <string name="kg">kg</string>
    <string name="expense">/expense</string>
    <string name="swipe_minimize">Swipe to minimize</string>
    <string name="no_file_path">No Proper File path</string>
    <string name="please_enter_positive_values">Please Enter positive values</string>
    <string name="reminder_goole_message">Reminder for Google calendar only. Please confirm that you have installed it</string>
    <string name="age_greater">Age cannot be greater than the finishing day of the last phase</string>
    <string name="product_catalog_header" translatable="false">Product Catalogue</string>
    <string name="txtAlertCitySubmit" translatable="false">Would you like to have a Purina store in </string>
    <string name="txtAlertEmail" translatable="false">Please state your email too </string>
    <string name="submit" translatable="false">Submit</string>
</resources>