<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8sp">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2sp"
        android:layout_marginTop="2sp"
        android:text="@string/set_reminder"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10sp"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="@+id/header_title"
        app:layout_constraintStart_toStartOf="@+id/header_title"
        app:layout_constraintTop_toBottomOf="@+id/header_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/toBuy_Check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:button="@drawable/custom_checkbox"
                android:buttonTint="@color/app_primary"
                android:clickable="true"
                android:drawablePadding="20sp"
                android:focusable="true"
                android:fontFamily="@font/helvetica_regular"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="10dip"
                android:paddingTop="10dip"
                android:paddingEnd="20dip"
                android:paddingBottom="10dip"
                android:text="@string/to_buy"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/buyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:fontFamily="@font/helvetica_regular"
                android:text="@string/three_day_advance"
                android:textColor="@color/app_secondry"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/toBuy_Check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toBuy_Check" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/changeFeed_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:layout_marginEnd="10sp"
                android:button="@drawable/custom_checkbox"
                android:buttonTint="@color/app_primary"
                android:clickable="true"
                android:drawablePadding="20sp"
                android:focusable="true"
                android:fontFamily="@font/helvetica_regular"
                android:gravity="center_vertical"
                android:lines="2"
                android:orientation="vertical"
                android:paddingStart="10dip"
                android:paddingTop="10dip"
                android:paddingEnd="20dip"
                android:paddingBottom="10dip"
                android:text="@string/to_change_feed"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/feedChangetext"
                app:layout_constraintStart_toStartOf="@+id/toBuy_Check"
                app:layout_constraintTop_toBottomOf="@+id/toBuy_Check" />

            <TextView
                android:id="@+id/feedChangetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:fontFamily="@font/helvetica_regular"
                android:text="@string/one_day_advance"
                android:textColor="@color/app_secondry"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/changeFeed_check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/buyText"
                app:layout_constraintTop_toTopOf="@+id/changeFeed_check" />

            <TextView
                android:id="@+id/ageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="4sp"
                android:fontFamily="@font/helvetica_regular"
                android:text="@string/age_of_animal"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/changeFeed_check"
                app:layout_constraintTop_toBottomOf="@+id/changeFeed_check" />

            <TextView
                android:id="@+id/feedStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_regular"
                android:text="@string/as_on"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ageText"
                app:layout_constraintEnd_toEndOf="@+id/feedingStartInputLayout"
                app:layout_constraintStart_toStartOf="@+id/feedingStartInputLayout"
                app:layout_constraintTop_toTopOf="@+id/ageText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="100sp"
                android:layout_marginTop="2sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/ageText"
                app:layout_constraintStart_toStartOf="@+id/ageText"
                app:layout_constraintTop_toBottomOf="@+id/ageText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageEditText"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="18sp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColorHint="#c0c0c0"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/feedingStartInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:gravity="center"
                app:startIconDrawable="@drawable/ic_calendar"
                app:layout_constraintEnd_toEndOf="@+id/feedChangetext"
                app:layout_constraintTop_toBottomOf="@+id/feedStartDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/feedingStartEditText"
                    android:layout_width="158sp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="18sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColorHint="#c0c0c0"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <CalendarView
                android:id="@+id/calenderView"
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                android:headerBackground="@color/app_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feedingStartInputLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/scrollContainer"
                app:layout_constraintStart_toStartOf="@+id/scrollContainer"
                app:layout_constraintTop_toBottomOf="@+id/scrollContainer">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:text="@string/create" />
            </LinearLayout>

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>