<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="langViewModel"
            type="cargill.com.purina.splash.viewmodel.LanguageViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/languageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash.View.FragmentOnboardingLanguage"
    android:background="@drawable/gradient">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/choose_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-light"
        android:padding="10sp"
        android:text="@string/choose_preferred_language"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:fontFamily="@font/helvetica_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/languageList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:padding="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="12sp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.120"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_language">

    </androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:editable="false"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:lines="2"
        android:padding="12sp"
        app:fontFamily="@font/helvetica_regular"
        android:text="@string/languageInstruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageList" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="312sp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/next"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textColor="#E00034"
        android:textSize="20sp"
        app:cornerRadius="20sp"
        android:fontFamily="@font/helvetica_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>